--- a/notebooks/Training network.ipynb
+++ b/notebooks/Training network.ipynb
@@ -88,7 +88,7 @@
     "                         weight_filler=dict(type='msra'),\n",
     "                         param={'lr_mult': lr_mult, 'decay_mult': decay_mult}\n",
     "                        )\n",
-    "    bn = L.BatchNorm(conv, in_place=True, param={'lr_mult': lr_mult})\n",
+    "    bn = L.BatchNorm(conv, in_place=True)\n",
     "    scale = L.Scale(conv, in_place=True, bias_term=True,\\\n",
     "                    param=[{'lr_mult': lr_mult},{'lr_mult': 2*lr_mult}])\n",
     "    relu = L.ReLU(conv, in_place=True)\n",
