--- a/SegNet_PyTorch_v2.ipynb
+++ b/SegNet_PyTorch_v2.ipynb
@@ -690,13 +690,15 @@
    ],
    "source": [
     "import os\n",
-    "import urllib\n",
+    "try:\n",
+    "    from urllib.request import URLopener\n",
+    "except ImportError:\n",
+    "    from urllib import URLopener\n",
     "\n",
     "# Download VGG-16 weights from PyTorch\n",
     "vgg_url = 'https://download.pytorch.org/models/vgg16_bn-6c64b313.pth'\n",
     "if not os.path.isfile('./vgg16_bn-6c64b313.pth'):\n",
-    "    weights = urllib.URLopener()\n",
-    "    weights.retrieve(vgg_url, './vgg16_bn-6c64b313.pth')\n",
+    "    weights = URLopener().retrieve(vgg_url, './vgg16_bn-6c64b313.pth')\n",
     "\n",
     "vgg16_weights = torch.load('./vgg16_bn-6c64b313.pth')\n",
     "mapped_weights = {}\n",
