Correct Potsdam data paths (fixes #27)

--- a/SegNet_PyTorch_v2.ipynb
+++ b/SegNet_PyTorch_v2.ipynb
@@ -97,7 +97,10 @@
     "\n",
     "if DATASET == 'Potsdam':\n",
     "    MAIN_FOLDER = FOLDER + 'Potsdam/'\n",
-    "    DATA_FOLDER = MAIN_FOLDER + 'Y_Ortho_IRRG/top_potsdam_{}_IRRG.tif'\n",
+    "    # Uncomment the next line for IRRG data\n",
+    "    # DATA_FOLDER = MAIN_FOLDER + '3_Ortho_IRRG/top_potsdam_{}_IRRG.tif'\n",
+    "    # For RGB data\n",
+    "    DATA_FOLDER = MAIN_FOLDER + '2_Ortho_RGB/top_potsdam_{}_RGB.tif'\n",
     "    LABEL_FOLDER = MAIN_FOLDER + '5_Labels_for_participants/top_potsdam_{}_label.tif'\n",
     "    ERODED_FOLDER = MAIN_FOLDER + '5_Labels_for_participants_no_Boundary/top_potsdam_{}_label_noBoundary.tif'    \n",
     "elif DATASET == 'Vaihingen':\n",
@@ -825,7 +828,7 @@
     "# Load the datasets\n",
     "if DATASET == 'Potsdam':\n",
     "    all_files = sorted(glob(LABEL_FOLDER.replace('{}', '*')))\n",
-    "    all_ids = [\"_\".join(f.split('_')[3:5]) for f in all_files]\n",
+    "    all_ids = [\"\".join(f.split('')[5:7]) for f in all_files]\n",
     "elif DATASET == 'Vaihingen':\n",
     "    #all_ids = \n",
     "    all_files = sorted(glob(LABEL_FOLDER.replace('{}', '*')))\n",
@@ -1246,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
